Grace/tests/gibbs/errors/t007.grace
// ERROR = L0001
if (true) then {
	print("Here")
}
